src/livecodes/styles/app.scss
/* ... */
.language-item {
  position: relative;
}

.tooltip {
  display: inline-block;
  opacity: 0.4;
  padding: 6px 8px;

  &:hover {
    opacity: 1;
  }

  svg {
    height: var(--s16);
    padding: 2px; // TODO Remove to increase icon size
    width: var(--s16);
  }
}

/* modes */
.embed {
  #toolbar {
    height: var(--toolbar-height);
    justify-content: space-between;

    .toolbar-app {
      justify-content: flex-start;

      #logo {
        order: 1;
      }

      #app-menu-button-project,
      #app-menu-button-settings,
      #app-menu-button-help {
        display: none;
      }

      .menu {
        display: inherit;
        margin: 0 0.5em 0 0;

        .menu-text {
          display: none;
        }

        &:hover {
          color: var(--link);
        }
      }

      .language-menu-button {
        display: none !important;
      }
    }

    .toolbar-render {
      flex-grow: 0;
      justify-content: flex-end;
      margin-right: var(--s4);
      min-width: 70px;
      width: auto;

      #project-title {
        display: none !important;
      }

      #fullscreen-button,
      &:not(.no-result) #result-button {
        display: flex !important;
      }

      #share-button,
      #login-link,
      #logout-link {
        display: none;
      }
    }
  }

  #focus-btn,
  #settings-button,
  #editor-settings-btn,
  #project-info-btn,
  #custom-settings-btn {
    display: none;
  }

  #editor-container {
    height: calc(100% - var(--toolbar-height));
  }

  @media only screen and (max-width: 480px) and (orientation: portrait) {
    #toolbar {
      --toolbar-height: 42px;
      display: flex;
      flex-direction: unset;
      flex-wrap: nowrap;
      height: var(--toolbar-height);
      width: 100%;

      #select-editor {
        height: var(--toolbar-height);
        margin: 0;

        li.editor-title {
          height: 32px;
          top: 0;
          width: 74px;
        }
      }
    }
  }
}

.simple-mode {
  .editor-title:not(.active),
  #toolbar #result-button,
  #toolbar #fullscreen-button,
  #editors #editor-tools,
  #console-input,
  #result-popup-btn,
  #broadcast-status-btn {
    display: none !important;
  }

  #toolbar {
    margin-bottom: -8px;
    transform: scale(0.8);
    transform-origin: left top;
    width: 125%;

    #select-editor {
      width: 100%;

      .editor-title.active {
        background-color: unset;
        border: 0;
        cursor: auto;
      }
    }

    #run-button {
      display: flex !important;
      position: absolute;
      right: 0;
    }
  }

  #editor-container {
    height: calc(100% - var(--toolbar-height)) !important;
  }

  #tools-pane-bar {
    font-size: var(--s12);
  }

  .tools-pane-title.has-mark .mark {
    display: none !important;
  }
}

.focus-mode {
  #app-menu-button-project,
  #app-menu-button-settings,
  #app-menu-button-help,
  .language-menu-button,
  #login-link,
  #logout-link,
  #share-button,
  #settings-button,
  .tools-pane-title:not(.console),
  .tool-buttons {
    visibility: hidden;
  }

  #toolbar {
    #result-button,
    #fullscreen-button {
      display: none !important;
    }
  }

  #focus-btn {
    opacity: 0.5;
    visibility: visible !important;
  }

  #focus-btn:hover {
    opacity: 1;
  }

  #editor-tools {
    bottom: 0;
    position: absolute;
  }

  @media only screen and (max-width: 768px) {
    #toolbar {
      #run-button,
      #share-button {
        margin: 0 var(--s4);
      }

      #settings-button,
      #login-link > span,
      #logout-link > span {
        display: none !important;
      }
    }
  }
}

/* Code Mirror */
// TODO TEST CM
.cm-wrap {
  height: 100%;
}

.cm-scroller {
  overflow: auto;
}

#console-input {
  .cm-activeLine {
    // background: var(--console-bg) !important; TODO Test this
  }

  .cm-gutter {
    display: none !important;
  }

  .cm-gutters #console-input-indicator {
    margin-left: 3px;
    margin-top: 3px;
  }
}

// CodeMirror Codeium
.cm-ghostText,
.cm-ghostText * {
  cursor: pointer;
  filter: grayscale(20%);
  opacity: 0.6;
}

.cm-ghostText:hover {
  background: #eee;
}

/* Prism JS */

.prism {
  margin: 0 !important;
  max-height: 100% !important;

  &#console-input {
    display: none !important;

    > pre {
      padding-left: 1em !important;
    }
  }

  .code-toolbar,
  pre {
    height: 100% !important;
    margin: 0 !important;
    max-height: 100% !important;

    .codeblock {
      padding-right: 2em !important;
    }
  }

  code {
    height: 100% !important;
    margin: 0 !important;
    max-height: 100% !important;
    overflow: auto;
    padding-bottom: 1em !important;
    padding-top: 2px !important;
    top: 2px !important;
  }

  &.codejar pre {
    box-sizing: border-box;
    cursor: text;
    padding-top: 0 !important;
  }

  &.codejar code {
    white-space: nowrap !important;
  }

  .token.comment {
    font-style: italic;
  }
}

/* line numbers */
pre[class*='language-'].line-numbers {
  counter-reset: linenumber;
  padding-left: 3.8em;
  position: relative;
}

pre[class*='language-'].line-numbers > code {
  position: relative;
  white-space: inherit;
}

/* codejar */
.line-numbers .line-numbers-rows {
  border-right: 1px solid #999;
  font-size: 100%;
  left: -3.8em;
  letter-spacing: -1px; /* works for line-numbers below 1000 lines */
  pointer-events: none;
  position: absolute;
  top: 0;
  user-select: none;
  width: 3em;
}

.line-numbers-rows > span {
  counter-increment: linenumber;
  display: block;
}

.line-numbers-rows > span::before {
  color: #999;
  content: counter(linenumber);
  display: block;
  padding-right: 0.8em;
  text-align: right;
}
/* ... */

